fix overflow x

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -6,7 +6,7 @@
 @import "services";
 @import "mixins";
 
-body {
+body, html {
     overflow-x: hidden;
 }
 
